<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="90dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:padding="10dp"
        app:cardCornerRadius="30dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#C9E6FF">

            <TextView
                android:id="@+id/hour_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour_9"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize20"
                app:layout_constraintBottom_toTopOf="@+id/weather_img"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/weather_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toTopOf="@+id/heat_rv_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hour_text"
                app:srcCompat="@drawable/ic_cloudy2" />

            <TextView
                android:id="@+id/heat_rv_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heat_20"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/weather_img" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>