<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin10"
        android:elevation="@dimen/margin10"
        app:cardCornerRadius="@dimen/carRadius30">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/month_card_color">

            <TextView
                android:id="@+id/day_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pazartesi"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize22"
                app:layout_constraintBottom_toBottomOf="@+id/weather_imageView"
                app:layout_constraintEnd_toStartOf="@+id/weather_imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/weather_imageView" />

            <ImageView
                android:id="@+id/weather_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin16"
                android:layout_marginBottom="@dimen/margin16"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/heat_rv_textView"
                app:layout_constraintStart_toEndOf="@+id/day_textview"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_sunny" />

            <TextView
                android:id="@+id/heat_rv_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hate_31"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/textSize22"
                app:layout_constraintBottom_toBottomOf="@+id/weather_imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/weather_imageView"
                app:layout_constraintTop_toTopOf="@+id/weather_imageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>